# wallet-bot

./: .gitignore  Dockerfile  Makefile  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/bot/: __main__.py  app.py
